--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "my-v0-project",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "next dev --experimental-https",
-    "server": "ts-node server.ts",
+    "server": "nodemon server.js",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -62,7 +63,6 @@
     "sonner": "^1.7.1",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
-    "ts-node": "^10.9.2",
     "vaul": "^0.9.6",
     "zod": "^3.24.1"
   },
@@ -73,6 +73,7 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@types/simple-peer": "^9.11.8",
+    "nodemon": "^3.1.10",
     "postcss": "^8",
     "tailwindcss": "^3.4.17",
     "typescript": "^5"
