--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,17 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
-/node_modules
+node_modules/
 
 # next.js
-/.next/
-/out/
+.next/
+out/
 
 # production
-/build
+build/
+
+# testing
+certificates/
 
 # debug
 npm-debug.log*
@@ -25,4 +28,3 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
-certificates
